two minor fixes to lint warnings